# odoo-forge

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-images.yml  cleanup-untagged.yml  quality.yml
docs/: 00-master-index.md  01-repository-map.md  02-repository-authority-matrix.md  03-src-core-map.md  04-cli-and-adapters-map.md  05-tests-and-quality-map.md  06-docs-and-openspec-lifecycle.md  07-spec-to-module-crosswalk.md  08-sp-data-environments-map.md  09-portfolio-and-evidence-crosswalk.md  10-diagrams-maintenance-guide.md  11-src-manifest-map.md  12-src-backend-map.md  13-src-ports-map.md  14-tests-manifest-map.md  15-tests-adapters-map.md  16-tests-cli-map.md  17-src-docker-adapter-map.md  18-src-workspace-adapter-map.md  19-src-registry-adapter-map.md  20-src-cli-composition-root-map.md  21-src-postgres-docker-foundation-map.md  22-example-runtime-guide.md
docs/adr/: 0001-control-plane-llega-con-el-segundo-actor.md  0002-edition-enterprise-y-categorias-de-mount-abiertas.md
docs/diagrams/: README.md  mermaid-config.json  odoo-forge-complete-platform.mmd  odoo-forge-current-implementation-guide.md  odoo-forge-current-implementation.mmd  puppeteer-config.json  render-current-implementation.sh
docs/reviews/: 2026-07-12-codebase-audit-roadmap.es.md  2026-07-12-codebase-audit-roadmap.md
docs/specs/: 2026-07-05-modular-odoo-platform-design.md  2026-07-05-phase-1-image-factory-design.md  2026-07-06-phase-2-slices-roadmap.md  2026-07-08-platform-roadmap.md  2026-07-14-stabilization-roadmap.md
docs/specs/platform/: SP-1-image-registry-provider.md  SP-10-governance-and-lifecycle.md  SP-2-database-provider-and-lifecycle.md  SP-3-remote-backend-providers.md  SP-5-rbac-auth.md  (+7 more)
example/: project.yaml
example-ar-ee/: project.yaml
factory/: Dockerfile  README.md  build.sh  entrypoint.sh  extra_requirements.txt  odoo.conf  smoke-test.sh  versions.yaml  wait-for-psql.py
factory/lib/: credentials.sh
factory/tests/: test-build-sh.sh  test-dockerfile-mount-roots.sh  test-entrypoint-addons-path.sh  test-entrypoint-addons-priority.sh  test-entrypoint-secret-files.sh  test-entrypoint-temp-secret-cleanup.sh
openspec/: config.yaml
src/odoo_forge_catalog/: __init__.py  errors.py  provider.py
src/odoo_forge_cli/: _composition.py  _presentation.py  _support.py  enterprise_credential.py  main.py
src/odoo_forge_docker/: __init__.py  credential_injection.py  provider.py
src/odoo_forge_git/: __init__.py  git_credential_injector.py  git_provider.py
src/odoo_forge_pipeline_github/: __init__.py  provider.py  transport.py
src/odoo_forge_postgres_docker/: __init__.py  authority.py  capture.py  provider.py  secret_injection.py  target_handoffs.py
src/odoo_forge_registry/: __init__.py  provider.py  published_artifact_resolver.py
src/odoo_forge_workspace/: __init__.py  provider.py
tests/: conftest.py
tests/adapters/: test_catalog_composition.py  test_catalog_index_provider.py  test_credential_injection.py  test_docker_provider.py  test_docker_provider_integration.py  test_git_credential_injector.py  test_git_provider.py  test_postgres_docker_authority.py  test_postgres_docker_capture.py  test_postgres_docker_provider.py  test_postgres_docker_provider_integration.py  test_postgres_docker_secret_injection.py  test_published_artifact_resolver.py  test_registry_provider.py  test_workspace_provider.py  test_workspace_provider_integration.py
tests/anonymization/: test_apply.py  test_policy.py
tests/architecture/: test_import_boundaries.py
tests/backend/: test_errors.py  test_plan.py  test_status.py
tests/cli/: test_backend.py  test_doctor.py  test_enterprise_credential.py  test_image_registry.py  test_lock.py  test_mount_base.py  test_onboard.py  test_project.py  test_rotate_enterprise_credential.py  test_unlock.py  test_validate.py
tests/credentials/: test_conventions.py  test_doctor.py  test_materialization.py  test_types.py
tests/data_artifacts/: test_capture.py  test_contracts.py
tests/database/: test_errors.py  test_readiness.py  test_types.py
tests/durable_operations/: test_service.py  test_types.py
tests/factory/: test_image_wiring.py
tests/fixtures/: malformed.project.yaml  odoo-idp.project.yaml  valid.project.yaml
tests/manifest/: test_composition.py  test_drift.py  test_errors.py  test_lockfile.py  test_lockfile_format.py  test_locking.py  test_module_deps.py  test_projection.py  test_projection_roundtrip.py  test_resolution.py  test_schema.py
tests/pipeline_github/: fakes.py  test_conformance.py  test_hermetic.py  test_logs.py  test_neutrality.py  test_status_mapping.py  test_transport_protocol.py  test_trigger.py
tests/ports/: test_backend_provider.py  test_database_provider.py  test_durable_operation_store.py  test_identity_provider.py  test_image_registry_provider.py  test_pipeline_provider.py  test_published_artifact_resolver.py  test_resource_ownership.py  test_source_provider.py  test_workspace_provider.py
tests/project_catalog/: test_resolver.py
tests/resource_ownership/: test_types.py
tests/tenancy/: test_errors.py  test_types.py
(+423 files in other folders)
