[project]
name = "odoo-forge"
version = "0.1.0"
description = "Pure Pydantic domain + CLI for composing decentralized Odoo project manifests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
forge = "odoo_forge_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_forge", "src/odoo_forge_cli", "src/odoo_forge_git", "src/odoo_forge_workspace", "src/odoo_forge_docker", "src/odoo_forge_registry", "src/odoo_forge_postgres_docker", "src/odoo_forge_catalog"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration' --cov=odoo_forge --cov-report=term-missing"
markers = [
    "integration: real-daemon-only backend tests (PG socket-vs-TCP race, ephemeral-port assignment, health timing); deselected by default, run explicitly with `-m integration`",
    "real_docker: isolated Docker PostgreSQL database-adapter acceptance tests; deselected by default, run explicitly with `-m real_docker`",
]

[tool.coverage.run]
source = ["odoo_forge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.importlinter]
root_packages = ["odoo_forge", "odoo_forge_cli", "odoo_forge_git", "odoo_forge_workspace", "odoo_forge_docker", "odoo_forge_registry", "odoo_forge_postgres_docker", "odoo_forge_catalog"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core never imports infrastructure or framework"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = [
    "docker",
    "boto3",
    "kubernetes",
    "git",
    "typer",
    "subprocess",
    "requests",
    "httpx",
]

[[tool.importlinter.contracts]]
name = "Core never imports the CLI"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_cli"]

[[tool.importlinter.contracts]]
name = "Core never imports the git adapter"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_git"]

[[tool.importlinter.contracts]]
name = "Core never imports the workspace adapter"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_workspace"]

[[tool.importlinter.contracts]]
name = "Core never imports the docker adapter"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_docker"]

[[tool.importlinter.contracts]]
name = "Core never imports the registry adapter"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_registry"]

[[tool.importlinter.contracts]]
name = "Core never imports the catalog adapter"
type = "forbidden"
source_modules = ["odoo_forge"]
forbidden_modules = ["odoo_forge_catalog"]
